--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
-        "livewire/volt": "^1.3"
+        "livewire/volt": "^1.3",
+        "spatie/laravel-ignition": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -20,8 +21,7 @@
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "phpunit/phpunit": "^10.1"
     },
     "autoload": {
         "psr-4": {
